test/1.4/errors/T_ENTMPL.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

template unused
    /// ERROR ENTMPL
    is garbage0 {
    /// ERROR ENTMPL
    is garbage1;
    // broken references are also within unused templates
    group a {
        /// ERROR ENTMPL
        is garbage2;
    }
    group b {
        /// ERROR ENTMPL
        in each garbage3 {
            /// ERROR ENTMPL
            is garbage4;
        }
    }

    // broken template references behind #if are tolerated
    #if (false) {
        group c {
            // ok
            in each garbage5 {
                // ok
                is garbage6;
            }
            // ok
            is garbage7;
        }
    }
}

#if (false) {
    bank b {
        // ok
        is garbage8;
    }
}

typedef int xyz;
template w {}
typedef w w2;

method init() {
    // the identifier in both 'each' and 'sequence' denote the template name,
    // not the template type.
    /// ERROR ENTMPL
    each w2 in (dev);
    /// ERROR ENTMPL
    each xyz in (dev);
    /// ERROR ETYPE
    local sequence(w2) a;
    /// ERROR ETYPE
    local sequence(xyz) b = each w in (this);
}
